# DIV-TL

./: CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
divtl/: __init__.py  divtl.py
examples/: example_usage.py
