[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "divtl"
version = "0.1.0"
description = "DIV-TL: Diversity-guided composite pool sampling with majority-only Tomek Links for imbalanced classification"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Ersin Kaya"}
]
keywords = ["imbalanced-learning", "oversampling", "SMOTE", "Tomek Links", "machine learning"]
dependencies = [
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "imbalanced-learn>=0.11",
  "smote-variants>=1.0.1"
]

[tool.setuptools.packages.find]
include = ["divtl*"]
